--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 
     <section id="home" class="hero">
-        <h2>Hello, I'm <span>Rojan Paudel</span></h2>
+        <h1>Hello, I'm <span>Rojan Paudel</span></h1>
+        <h2>    This is my web page     </h2>
     </section>
 
 
