--- a/aboutme.html
+++ b/aboutme.html
@@ -12,8 +12,8 @@
     <section id="about" class="section">
         <h1>About Me</h1>
         <p>
-            Iam learning  <h4>web developmen, concepte of programming. </h4>
-        
+            I am learning  <h4>web developmen, concepte of programming. </h4></p>
+        <P>
             I am a creative designer skilled in graphic design, video editing,
             logo design, whiteboard animation, and 3D animation.
             I love creating clean and meaningful visuals.
