--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     
-    <!-- About Section -->
+    <header>
+        <nav class="navbar">
+            <h1 class="logo">Rojan Paudel</h1>
+            <ul class="nav-links">
+                <li><a href="C:\Users\acer\Documents\GitHub\rojan\index.html">Home</a> </li>
+                 <li></li><a href="C:\Users\acer\Documents\GitHub\rojan\aboutme.html">About Me</a></li>
+                <li><a href="C:\Users\acer\Documents\GitHub\rojan\contact.html">Contact</a></li>
+                 <li><a href="C:\Users\acer\Documents\GitHub\rojan\image.html">Gallery</a>   </li>
+            </ul>
+        </nav>
+    </header>
+    
     <section id="about" class="section">
         <h1>About Me</h1>
         <p>
@@ -18,7 +29,6 @@
             logo design, whiteboard animation, and 3D animation.
             I love creating clean and meaningful visuals.
         </p>
-         <img src="C:\Users\acer\Pictures\Screenshot_31-12-2025_19548_www.facebook.com.jpeg" alt="error try again" >
 <br>
         <section id="portfolio" class="section">
         <h2>My Work</h2>
