--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <nav class="navbar">
             <h1 class="logo">Rojan Paudel</h1>
             <ul class="nav-links">
-                <li><a href="#home">Home</a> </li>
+                <li><a href="C:\Users\acer\Documents\GitHub\rojan\index.html">Home</a> </li>
                  <li></li><a href="C:\Users\acer\Documents\GitHub\rojan\aboutme.html">About Me</a></li>
                 <li><a href="C:\Users\acer\Documents\GitHub\rojan\contact.html">Contact</a></li>
+                 <li><a href="C:\Users\acer\Documents\GitHub\rojan\image.html">Gallery</a>   </li>
             </ul>
         </nav>
     </header>
