--- a/image.html
+++ b/image.html
@@ -26,7 +26,7 @@
     <section class="gallery-section">
   <h1>Gallery</h1>
 
-  <h2>My photo</h2>
+  
   <div class="gallery-images">
     <img src="C:\Users\acer\Pictures\IMG_4642.jpeg">
     <img src="C:\Users\acer\Pictures\IMG_4645.jpeg">
@@ -34,6 +34,9 @@
 
   
 </section>
+ <footer>
+        <p>© 2025 Rojan Paudel| All Rights Reserved</p>
+    </footer>
 
 </body>
 </html>
