--- a/image.html
+++ b/image.html
@@ -35,7 +35,7 @@
   
 </section>
  <footer>
-        <p>© 2025 Rojan Paudel| All Rights Reserved</p>
+        <p>© 2025 Rojan Paudel| Thankyou for visit </p>
     </footer>
 
 </body>
